--- a/web-app/public/index.html
+++ b/web-app/public/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bar Royal</title>
     <link rel="stylesheet" href="/dist/main.css" />
-    <script defer src="/epos-2.20.0.js"></script>
+    <!-- <script defer src="/epos-2.20.0.js"></script> -->
+    <script defer src="/epos-2.22.0.js"></script>
     <script defer src="/dist/bundle.js"></script>
 </head>
 
